<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Do It</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_list">List</string>
    <string name="action_done">Done</string>
    <string name="your">Your To Do List:</string>
    <string name="add">Add</string>
    <string name="enter_item">Add a To Do List Item:</string>
    <string name="empty">Your To Do List is Empty!</string>
    <string name="delete">Delete</string>
    <string name="completed">Completed</string>
    <string name="title_activity_completed_activities">Completed Activities</string>
    <string name="pointsEarned">You have earned</string>
    <string name="progressPoints">Progress Points!</string>
    <string name="emptyDone">You\'re done list is empty, you lazy bum!</string>
    <string name="notFinished">Not Done</string>
    <string name="title_activity_main_activity_nav">MainActivityNav</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_completed">CompletedActivity</string>
    <string name="more">More</string>
    <string name="title_activity_more">More Info</string>
    <string name="started">Task Started:</string>
    <string name="finished">Task Finished:</string>
    <string name="timesComleted">Times Completed:</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_settings">Settings</string>

</resources>
