<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="zaneapps.doit.MoreActivity" >

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="TextView"
        android:textSize="@dimen/abc_action_bar_title_text_size" />

    <TextView
        android:id="@+id/textViewCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/finished"
        android:layout_alignBottom="@+id/finished"
        android:layout_alignParentRight="true"
        android:text="TextView" />

    <TextView
        android:id="@+id/textViewStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/started"
        android:layout_alignBottom="@+id/started"
        android:layout_alignLeft="@+id/textViewCompleted"
        android:text="TextView" />

    <TextView
        android:id="@+id/textViewTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/timesCompleted"
        android:layout_alignLeft="@+id/textViewStarted"
        android:text="TextView" />

    <TextView
        android:id="@+id/started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timesCompleted"
        android:layout_below="@+id/timesCompleted"
        android:layout_marginTop="29dp"
        android:text="@string/started" />

    <TextView
        android:id="@+id/finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/started"
        android:layout_marginTop="29dp"
        android:text="@string/finished" />

    <TextView
        android:id="@+id/timesCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewName"
        android:layout_marginTop="29dp"
        android:text="@string/timesComleted" />

    <Button
        android:id="@+id/notFinishedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/finished"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:onClick="moveToDo"
        android:text="@string/notFinished" />

</RelativeLayout>
